--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
             <div class="flex items-center space-x-4">
                 <div class="flex-1 min-w-0">
                     <p class="text-sm font-medium text-gray-900 truncate">
-                        M. Adzanta Ramadhan Novanda
+                        Muhammad Rafly Ardyan
                     </p>
                     <p class="text-sm text-gray-800 truncate">
                         Hari pancasila adalah hari yang penting untuk meningkatkan rasa nasionalis kita
                     </p>
                 </div>
                 <div class="inline-flex items-center text-base font-semibold text-gray-900">
-                    5011231106
+                    5011231127
                 </div>
             </div>
         </li>
@@ -78,7 +78,7 @@
             <div class="flex items-center space-x-4">
                 <div class="flex-1 min-w-0">
                     <p class="text-sm font-medium text-gray-900 truncate">
-                        Fadjar lagi
+                        Muhammad Rafly Ardyan
                     </p>
                     <p class="text-sm text-gray-800 truncate">
                         Selamat hari pancasila
